--- a/themes/mytheme/layouts/partials/head.html
+++ b/themes/mytheme/layouts/partials/head.html
@@ -12,3 +12,19 @@ onload="renderMathInElement(document.body);"></script>
 {{ partialCached "head/js.html" . }}
 
 <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
+
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+  <h1 class="text-3xl font-bold underline">
+  </h1>
+</body>
+</html>
+
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
