--- a/themes/mytheme/layouts/_default/baseof.html
+++ b/themes/mytheme/layouts/_default/baseof.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
   {{ partial "head.html" . }}
 </head>
-<body>
-  <header>
+<body class="flex flex-col items-center min-h-screen bg-base-200 text-base-content">
+  <header class="w-full">
     {{ partial "header.html" . }}
   </header>
-  <main>
-    {{ block "main" . }}{{ end }}
+  <main class="flex-grow w-full flex justify-center">
+    <div class="max-w-3xl w-full px-4 text-left">
+      {{ block "main" . }}{{ end }}
+    </div>
   </main>
-  <footer>
+  <footer class="w-full">
     {{ partial "footer.html" . }}
   </footer>
 </body>
