Clean up Ising post, more research

--- a/themes/mytheme/layouts/partials/head.html
+++ b/themes/mytheme/layouts/partials/head.html
@@ -24,7 +24,7 @@ onload="renderMathInElement(document.body);"></script>
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
 
 <div class="flex justify-center mt-6">
-    <img class="w-10 h-auto rounded" src="/headshot.jpg">
+    <img class="w-10 h-auto rounded" src="/headshot.png">
 </div>
 
 <script src="https://cdn.tailwindcss.com"></script>
