--- a/themes/mytheme/layouts/partials/footer.html
+++ b/themes/mytheme/layouts/partials/footer.html
@@ -1,1 +1,3 @@
-<p>Copyright {{ now.Year }} Gigabug. All rights reserved.</p>
+<p class="text-center text-sm p-4">
+    Copyright {{ now.Year }} Gigabug. All rights reserved.
+</p>    
