--- a/themes/mytheme/layouts/partials/header.html
+++ b/themes/mytheme/layouts/partials/header.html
@@ -1,5 +1,7 @@
 <div class="flex flex-col items-center pt-4 space-y-1">
-    <img class="w-28 rounded-full" src="/DSC03689.jpg">
+    <a href="/">
+        <img class="w-28 rounded-full" src="/DSC03689.jpg">
+    </a>
     {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
     <label class="swap swap-rotate">
         <!-- this hidden checkbox controls the state -->
