--- a/themes/mytheme/layouts/_default/baseof.html
+++ b/themes/mytheme/layouts/_default/baseof.html
@@ -4,6 +4,18 @@
   {{ partial "head.html" . }}
 </head>
 <body class="bg-base-200 text-base-content">
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      renderMathInElement(document.body, {
+            delimiters: [
+                { left: "$", right: "$", display: false },
+                { left: "$$", right: "$$", display: true }
+            ]
+        });
+    });
+</script>
+
   <header class="w-full">
     {{ partial "header.html" . }}
   </header>
