--- a/themes/mytheme/layouts/partials/menu.html
+++ b/themes/mytheme/layouts/partials/menu.html
@@ -12,7 +12,7 @@ Renders a menu for the given menu ID.
 
 {{- with index site.Menus $menuID }}
   <nav>
-    <ul class="flex justify-center space-x-3">
+    <ul class="flex w-48 justify-between">
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
   </nav>
