--- a/themes/mytheme/layouts/partials/footer.html
+++ b/themes/mytheme/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <p class="text-center text-sm p-4">
-    Copyright {{ now.Year }} Gigabug. All rights reserved.
+    Copyright {{ now.Year }} Gigabug Computer. All rights reserved.
 </p>    
